Create note editor

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -11,11 +11,19 @@
     <header>
         <h1>WebStickies</h1>
         <ul>
-            <li>New Note</li>
-            <li>Delete All</li>
+            <li class="new-note">New Note</li>
+            <li class="delete-notes">Delete All</li>
         </ul>
     </header>
     <div class="popup-body">
+        <div class="note-editor">
+            <form action="#">
+                <div class="note">
+                    <textarea name="text"></textarea>
+                </div>
+                <button>Create Note</button>
+            </form>
+        </div>
         <h2>Current Notes</h2>
     </div>
     
