Add create note heading

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -16,7 +16,9 @@
         </ul>
     </header>
     <div class="popup-body">
+        
         <div class="note-editor">
+            <h2>Create a Note</h2>
             <form action="#">
                 <div class="note">
                     <textarea name="text"></textarea>
